--- a/src/header/css/header.pcss
+++ b/src/header/css/header.pcss
@@ -32,7 +32,7 @@
 		box-sizing: border-box;
 	}
 
-	& ul, & li, & label {
+	& li, & label {
 		margin: 0;
 	}
 
